# dph-sndfile

./: LICENSE  README  dph-sndfile.cabal
Data/Array/Parallel/: Sndfile.hs
Test/: ReadWrite.hs  Vectorised.hs
example/: rw.hs
